cleaning up code

--- a/src/styles/pages/landing.css
+++ b/src/styles/pages/landing.css
@@ -55,7 +55,7 @@
     text-align: right;
 }
 
-.content-wrapper .location {
+.content-wrapper .location strong {
     font-weight: 800;
 }
 
@@ -68,12 +68,13 @@
     height: 80px;
    
     background: #ffd666;
-    
     border-radius: 30px;
     
     display: flex;
     align-items: center;
     justify-content: center;
+
+    transition: background-color 0.2s;
 };
 
 .content-wrapper .enter-app:hover {
