fixing css file for landing page

--- a/src/styles/pages/landing.css
+++ b/src/styles/pages/landing.css
@@ -75,7 +75,7 @@
     justify-content: center;
 
     transition: background-color 0.2s;
-};
+}
 
 .content-wrapper .enter-app:hover {
     background: #96FEFF;
